added models and views

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,8 +28,8 @@
         %a.navbar-brand(href="#") Shop
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            %li= link_to "Categories", "/categories"
-            %li= link_to "Cart", "/cart"
+            %li= link_to "Categories", "/"
+            %li= link_to "Cart", "/shop/cart"
 
     .container
       .row
